<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/transparent"
    tools:context=".ui.base.location.LocationChangesActivity">

<androidx.cardview.widget.CardView
    android:id="@+id/main_view_container"
    android:layout_width="match_parent"
    app:cardCornerRadius="10dp"
    android:layout_marginTop="20dp"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:background="@color/white"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/top_bar"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:orientation="horizontal"
            android:layout_height="60dp">

            <LinearLayout
                android:id="@+id/title_container"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:id="@+id/btnBack"
                    android:layout_width="60dp"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:src="@drawable/img_back"
                        android:layout_height="wrap_content">

                    </ImageView>


                </RelativeLayout>

                <TextView
                    android:id="@+id/search_bar_title"
                    android:layout_width="match_parent"
                    android:text="@string/change_delivery_address"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:layout_marginEnd="60dp"
                    android:textStyle="bold"
                    android:fontFamily="@font/barlow_medium"
                    android:gravity="center"
                    android:layout_height="match_parent">

                </TextView>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/selected_address_container"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:weightSum="2"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:fontFamily="@font/barlow_medium"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:text="Kavindu Motor Engineers"
                android:textSize="12sp">

            </TextView>

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="11sp"
                android:textColor="@color/black"
                android:fontFamily="@font/barlow_medium"
                android:text="44 Aponso Mawatha, Moratuwa">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/map_container"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="120dp">

            <LinearLayout
                android:layout_margin="20dp"
                android:background="@drawable/background_ash_10dp_all"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:text="Map View"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content">

                </TextView>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:background="@color/white"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/edit_text_container_1"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="2.7"
                android:layout_height="40dp">

                <EditText
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:textColorHint="@color/hint_color"
                    android:hint="House, Apt No"
                    android:textSize="12sp"
                    android:paddingLeft="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/background_edit_text_5dp_all"
                    android:layout_height="match_parent">

                </EditText>

                <EditText
                    android:layout_weight="1.7"
                    android:layout_width="0dp"
                    android:textColorHint="@color/hint_color"
                    android:hint="Building Name"
                    android:paddingLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:textSize="12sp"
                    android:background="@drawable/background_edit_text_5dp_all"
                    android:layout_height="match_parent">

                </EditText>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/edit_text_container_2"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:layout_height="40dp">

                <EditText
                    android:layout_width="match_parent"
                    android:textColorHint="@color/hint_color"
                    android:hint="Street Name or Number"
                    android:textSize="12sp"
                    android:paddingLeft="10dp"
                    android:background="@drawable/background_edit_text_5dp_all"
                    android:layout_height="match_parent">

                </EditText>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/edit_text_container_3"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:layout_height="40dp">

                <EditText
                    android:layout_width="match_parent"
                    android:textColorHint="@color/hint_color"
                    android:hint="District"
                    android:textSize="12sp"
                    android:paddingLeft="10dp"
                    android:background="@drawable/background_edit_text_5dp_all"
                    android:layout_height="match_parent">

                </EditText>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/edit_text_container_4"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:layout_height="40dp">

                <EditText
                    android:layout_width="match_parent"
                    android:textColorHint="@color/hint_color"
                    android:hint="Landmark"
                    android:textSize="12sp"
                    android:paddingLeft="10dp"
                    android:background="@drawable/background_edit_text_5dp_all"
                    android:layout_height="match_parent">

                </EditText>
            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/btn_get_started"
            android:layout_width="match_parent"
            android:layout_marginTop="80dp"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="@dimen/basic_button_width"
                android:layout_height="@dimen/basic_button_height"
                android:layout_centerInParent="true"
                android:background="@color/view_pager_select_color">

                <TextView
                    android:id="@+id/get_started"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/barlow_medium"
                    android:gravity="center"
                    android:text="@string/update_address"
                    android:textAppearance="@style/get_started" />

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btn_skip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/barlow_medium"
                android:gravity="center"
                android:text="@string/remove_address"
                android:textAppearance="@style/remove_address" />

        </RelativeLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>

</LinearLayout>